# trabalho-fcg

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  compile_commands.json
.github/workflows/: macos.yml  release.yml  ubuntu-lab.yml  ubuntu.yml  windows.yml
assets/materials/: Intercity1.mtl  VIVY.mtl  default.mtl  girl OBJ.mtl  girlOBJ.mtl  goldenPillar.mtl  hinata4.mtl  key.mtl  labirinto.mtl  leoncio.mtl  metal_cube.mtl  silverPillar.mtl  stonePillar.mtl  wood_plane.mtl  wood_plane11.mtl  wood_plane12.mtl
assets/shaders/: blinn-phong.frag  blinn-phong.vert  gouraud.frag  gouraud.vert  phong.frag  phong.vert  phong_triplanar.frag  phong_triplanar.vert  postprocess.frag  postprocess.vert  primitive.vert  quatUi.frag  quatUi.vert  skybox.frag  skybox.vert  tri.frag  tri.vert
cmake/: SourcesAndHeaders.cmake  StandardSettings.cmake  Vcpkg.cmake
include/algos/: HalfEdgeStructure.hpp  algoShape.hpp
include/algos/gjk/: VoronoiSimplex.hpp  gjk.h
include/algos/sat/: SatAlgorithm.hpp
include/entrePortais/: Shader.hpp  TriScene.hpp  Window.hpp
include/entrePortaisEngine/: Bezier.hpp  Buffer.hpp  Camera.hpp  Compatibility.hpp  EasyMesh.hpp  Event.hpp  IGameNode.hpp  IMesh.hpp  IObject.hpp  IPlugin.hpp  IScene.hpp  ImGuiPlugin.hpp  Logger.hpp  Shader.hpp  ShadersManager.hpp  Transform.hpp  TriScene.hpp  VAOBuffer.hpp  VertexArrayBuffer.hpp  Window.hpp
include/entrePortaisEngine/Characters/: FirstPersonCharacter.hpp
include/entrePortaisEngine/Objects/: AmbientFromTexture.hpp  ObjFromFile.hpp
include/entrePortaisEngine/gui/: GuiObject.hpp  GuiRectangle.hpp
include/entrePortaisEngine/meshes/: ComputeNormals.hpp  CubeMesh.hpp  CylinderMesh.hpp  EasyMesh.hpp  IMesh.hpp  MeshFromObj.hpp  PlaneMesh.hpp
include/entrePortaisEngine/physics/: BoxCollider.hpp  Boxes.hpp  ICollider.hpp  OctreeAdaptor.hpp  PhysXAdaptor.hpp  PhysicsActor.hpp  PhysicsEngine.hpp  PhysicsScene.hpp  RigidBody.hpp  SphereCollider.hpp  collisions.hpp
include/entrePortaisEngine/plugins/: IPlugin.hpp  ImGuiPlugin.hpp
include/entrePortaisEngine/render/: Camera.hpp  FrameBuffer.hpp  IRenderable.hpp  PointLight.hpp  Renderer.hpp  Shader.hpp  ShadersManager.hpp  Texture.hpp  TextureHandle.hpp  TextureManager.hpp  VertexArrayBuffer.hpp
include/entrePortaisEngine/tasks/: ITask.hpp  LambdaTask.hpp  TaskHandler.hpp  TaskManager.hpp
include/labirinto/: CreditsScene.hpp  GameScene.hpp  HelpScene.hpp  InvisibleBox.hpp  Key.hpp  LabirintoMap.hpp  LoadingScene.hpp  LoseScene.hpp  MenuScene.hpp  Pillar.hpp  WinScene.hpp
include/testGame/: Ball.hpp  CubeObject.hpp  Cuelho.hpp  CylinderObject.hpp  DependencyTask.hpp  EmptyObject.hpp  Ground.hpp  Player.hpp  TeapotObject.hpp  TriObject.hpp  TriScene.hpp  WaitAndFinishTask.hpp
include/utils/: matrices.h  utils.hpp
src/: main.cpp
src/algos/: HalfEdgeStructure.cpp  algoShape.cpp
src/algos/gjk/: Contact.cpp  Contact.h  VoronoiSimplex.cpp  gjk.cpp
src/algos/sat/: SatAlgorithm.cpp
src/entrePortais/: Shader.cpp  TriScene.cpp  Window.cpp
src/entrePortaisEngine/: Bezier.cpp  Buffer.cpp  Camera.cpp  EasyMesh.cpp  Event.cpp  IGameNode.cpp  IMesh.cpp  IObject.cpp  IPlugin.cpp  IScene.cpp  ImGuiPlugin.cpp  Logger.cpp  Shader.cpp  ShadersManager.cpp  Transform.cpp  TriScene.cpp  VAOBuffer.cpp  VertexArrayBuffer.cpp  Window.cpp
src/entrePortaisEngine/Characters/: FirstPersonCharacter.cpp
src/entrePortaisEngine/Objects/: AmbientFromTexture.cpp  ObjFromFile.cpp
src/entrePortaisEngine/Render/: IRenderable.cpp  Renderer.cpp
src/entrePortaisEngine/gui/: GuiObject.cpp  GuiRectangle.cpp
src/entrePortaisEngine/meshes/: ComputeNormals.cpp  CubeMesh.cpp  CylinderMesh.cpp  EasyMesh.cpp  IMesh.cpp  MeshFromObj.cpp  PlaneMesh.cpp
src/entrePortaisEngine/physics/: BoxCollider.cpp  ICollider.cpp  PhysXAdapter.cpp  PhysicsActor.cpp  PhysicsEngine.cpp  PhysicsScene.cpp  RigidBody.cpp  SphereCollider.cpp  collisions.cpp
src/entrePortaisEngine/plugins/: IPlugin.cpp  ImGuiPlugin.cpp
src/entrePortaisEngine/render/: Camera.cpp  FrameBuffer.cpp  IRenderable.cpp  ImageTexture.cpp  ImageTexture.h  PointLight.cpp  Renderer.cpp  Shader.cpp  ShadersManager.cpp  Texture.cpp  TextureManager.cpp  VertexArrayBuffer.cpp
src/entrePortaisEngine/tasks/: TaskManager.cpp
src/labirinto/: CreditsScene.cpp  GameScene.cpp  HelpScene.cpp  InvisibleBox.cpp  Key.cpp  LabirintoMap.cpp  LabirintoMap.hpp  LoadingScene.cpp  LoseScene.cpp  MenuScene.cpp  Pillar.cpp  Player.cpp  Player.hpp  WinScene.cpp
src/testGame/: Ball.cpp  CubeObject.cpp  Cuelho.cpp  CylinderObject.cpp  DependencyTask.cpp  EmptyObject.cpp  Ground.cpp  Player.cpp  TeapotObject.cpp  TriObject.cpp  TriScene.cpp  WaitAndFinishTask.cpp
src/utils/: matrices.cpp  utils.cpp  utils.hpp
test/src/: TransformsTest.cpp  rotations.cpp  test_utils.hpp
